# jats-parser

./: check.py  join_parquet_files.py  process_xml.py  pyproject.toml  slurm_job.sh  xml_2_parquet.py
