[tool.poetry]
name = "jats-parser"
version = "0.1.0"
description = "python scripts parsing the Europe PMC interchange format JATS using the lxml library"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "jats_parser"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.3"
polars = "^0.18.15"
click = "^8.1.7"
unidecode = "^1.3.6"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
